--- a/Latmarket/Transport/car/assets/style-car.css
+++ b/Latmarket/Transport/car/assets/style-car.css
@@ -12,7 +12,6 @@ display: flex;
 justify-content: center;
 align-items: center;
 flex-wrap: wrap;
-display: none;
 
 }
 
@@ -30,6 +29,31 @@ align-items: center;
 background: var(--black);
 padding: 0 1.5rem;
 position: relative;
+
+}
+
+.grupboxs .box.active{
+
+background: var(--second);
+cursor: default;
+
+}
+
+.grupboxs .box.active i{
+
+color: var(--white);
+
+}
+
+.grupboxs .box.active:hover {
+ 
+background: var(--second); 
+
+}
+
+.grupboxs .box.active:hover i, .grupboxs .box.active:hover p{
+ 
+color: var(--white); 
 
 }
 
@@ -85,6 +109,10 @@ width: 80%;
 height: auto;
 box-shadow: var(--shadow);
 background: var(--black);
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
 
 }
 
@@ -113,6 +141,18 @@ cursor: pointer;
 
 }
 
+.list-choice.deactive{
+
+cursor: not-allowed; 
+
+}
+
+.list-choice.deactive .list-choice-title{
+
+background: rgba(255, 87, 51, 50%);
+
+}
+
 .list-choice input[type="radio"]{
 
 position:absolute;
@@ -131,6 +171,7 @@ box-sizing: border-box;
 color: #FFF;
 
 }
+
 
 
 .list-choice input[type="radio"] + span {
@@ -194,6 +235,265 @@ top: 0em;
 max-height: 1040px;
 
 }
+
+
+.min-max-filter{
+
+width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+margin: 2rem 0;
+
+}
+
+.filter-box{
+
+width: 20%;
+margin: 0 .5rem;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+
+}
+
+
+.filter-box h1{
+
+color: var(--second);
+font-size: 1.5rem;
+margin-bottom: 2rem;
+
+}
+
+    
+.price-input{
+
+display: flex;
+justify-content: center;
+align-items: center;
+
+}
+    
+.price-input input{
+
+padding: .5rem .8rem;
+font-size: 1rem;
+width: 40%;
+margin: 0 .5rem;
+text-align: center;
+-moz-appearance: none;
+
+}
+    
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button{
+
+-webkit-appearance: none;
+
+}
+
+.range-slider{
+
+background: #ddd;
+height: 10px;
+width: 100%;
+margin-top: 2rem;
+border-radius: 2rem;
+position: relative;
+
+}
+
+.progress{
+
+background: rgba(255, 87, 51, 50%);
+height: 10px;
+border-radius: 2rem;
+position: absolute;
+left: 0;
+right: 0;
+transition: none !important;
+
+}
+    
+.range-input{
+
+position: relative;
+width: 100%;
+
+}
+
+.range-input input{
+
+position: absolute;
+top: -10px;
+left: 0;
+height: 10px;
+width: 100%;
+pointer-events: none;
+-webkit-appearance: none;
+background: none;
+
+}
+
+input[type="range"]::-webkit-slider-thumb{
+
+height: 15px;
+width: 15px;
+border-radius: 50%;
+-webkit-appearance: none;
+pointer-events: auto;
+background: var(--second);
+
+}
+
+.radio-filter {
+
+width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+margin: 2rem 0;
+
+}
+
+.radio-filter .box {
+
+color: var(--white);
+margin: 0 2rem;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+width: 25%;
+
+}
+
+.radio-filter .box h1 {
+
+font-size: 1.2rem;
+margin-bottom: 1rem;
+
+}
+
+.wrapper {
+
+display: inline-flex;
+height: 4rem;
+width: 100%;
+align-items: center;
+justify-content: space-evenly;
+padding: 15px 10px;
+box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.7);
+
+}
+
+.wrapper .option {
+
+background: #fff;
+height: 100%;
+width: 100%;
+display: flex;
+align-items: center;
+justify-content: space-evenly;
+margin: 0 10px;
+cursor: pointer;
+padding: 0 10px;
+transition: all 0.3s ease;
+
+}
+
+.wrapper .option .dot {
+
+height: 15px;
+width: 15px;
+background: #d9d9d9;
+border-radius: 50%;
+position: relative;
+
+}
+
+.wrapper .option .dot::before {
+
+position: absolute;
+content: "";
+top: 4px;
+left: 4px;
+width: 7px;
+height: 7px;
+background: var(--second);
+border-radius: 50%;
+opacity: 0;
+transform: scale(1.5);
+transition: all 0.3s ease;
+
+}
+
+input[type="radio"] {
+
+display: none;
+
+}
+
+
+input[id="dtp-option-1"]:checked ~ .dtp-option-1,
+input[id="dtp-option-2"]:checked ~ .dtp-option-2,
+input[id="dtp-option-3"]:checked ~ .dtp-option-3,
+input[id="jauda-option-1"]:checked ~ .jauda-option-1,
+input[id="jauda-option-2"]:checked ~ .jauda-option-2,
+input[id="nobraukums-option-1"]:checked ~ .nobraukums-option-1,
+input[id="nobraukums-option-2"]:checked ~ .nobraukums-option-2 {
+
+border-color: var(--second);
+background: var(--second);
+
+}
+
+input[id="dtp-option-1"]:checked ~ .dtp-option-1 .dot,
+input[id="dtp-option-2"]:checked ~ .dtp-option-2 .dot,
+input[id="dtp-option-3"]:checked ~ .dtp-option-3 .dot,
+input[id="jauda-option-1"]:checked ~ .jauda-option-1 .dot,
+input[id="jauda-option-2"]:checked ~ .jauda-option-2 .dot,
+input[id="nobraukums-option-1"]:checked ~ .nobraukums-option-1 .dot,
+input[id="nobraukums-option-2"]:checked ~ .nobraukums-option-2 .dot {
+
+background: #fff;
+
+}
+
+input[id="dtp-option-1"]:checked ~ .dtp-option-1 .dot::before,
+input[id="dtp-option-2"]:checked ~ .dtp-option-2 .dot::before,
+input[id="dtp-option-3"]:checked ~ .dtp-option-3 .dot::before,
+input[id="jauda-option-1"]:checked ~ .jauda-option-1 .dot::before,
+input[id="jauda-option-2"]:checked ~ .jauda-option-2 .dot::before,
+input[id="nobraukums-option-1"]:checked ~ .nobraukums-option-1 .dot::before,
+input[id="nobraukums-option-2"]:checked ~ .nobraukums-option-2 .dot::before {
+
+opacity: 1;
+transform: scale(1);
+
+}
+
+.wrapper .option span {
+
+font-size: 1rem;
+color: #808080;
+
+}
+
+input[id="dtp-option-1"]:checked ~ .dtp-option-1 span,
+input[id="dtp-option-2"]:checked ~ .dtp-option-2 span,
+input[id="dtp-option-3"]:checked ~ .dtp-option-3 span,
+input[id="jauda-option-1"]:checked ~ .jauda-option-1 span,
+input[id="jauda-option-2"]:checked ~ .jauda-option-2 span,
+input[id="nobraukums-option-1"]:checked ~ .nobraukums-option-1 span,
+input[id="nobraukums-option-2"]:checked ~ .nobraukums-option-2 span {
+
+color: #fff;
+
+}
+
 
 
 .offers{
