--- a/Latmarket/Transport/car/assets/style-car.css
+++ b/Latmarket/Transport/car/assets/style-car.css
@@ -300,7 +300,7 @@ position: relative;
 
 .progress{
 
-background: rgba(255, 87, 51, 50%);
+background: var(--hover);
 height: 10px;
 border-radius: 2rem;
 position: absolute;
@@ -513,16 +513,18 @@ height: 25rem;
 box-shadow: 0 0 1.5rem rgba(0, 0, 0, 30%);
 margin: 2rem 0;
 display: flex;
-cursor: pointer;
 position: relative;
 
 }
 
-.cblink{
 
-position: absolute;
-width: 100%;
-height: 100%;
+.carinfo{
+
+width: 60%;
+display: flex;
+align-items: center;
+flex-direction: column;
+margin-top: 1rem;
 
 }
 
@@ -541,16 +543,81 @@ margin-bottom: 1rem;
 
 width: 40%;
 height: 25rem;
+position: relative;
+overflow: hidden;
+display: flex;
+justify-content: center;
 
 }
 
-.car-foto img{
+.cblink{
+
+position: absolute;
+width: 100%;
+height: 100%;
+opacity: 0;
+z-index: 1;
+cursor: pointer;
+
+}
+
+.photos-container {
+
+display: flex;
+transition: transform 0.5s ease-in-out;
+align-items: center;
+width: 120%;
+height: 100%;
+
+}
+
+
+.photos-container img{
 
 width: 100%;
 height: 100%;
 object-fit: cover;
 
 }
+
+.photobtn{
+
+position: absolute;
+bottom: 10%;
+left: 50%;
+transform: translate(-50%, 0);
+display: flex;
+justify-content: center;
+align-items: center;
+z-index: 3;
+
+}
+
+.photobtn button{
+
+width: 1.5rem;
+height: 1.5rem;
+border-radius: 50%;
+background: var(--maincolor);
+margin: 0 .5rem;
+cursor: pointer;
+opacity: 80%;
+
+}
+
+.photobtn button:hover{
+
+background: var(--hover2);
+
+}
+
+.photobtn button.active{
+
+background: var(--secondcolor);
+opacity: 100%;
+
+}
+
 
 .carNosakums{
 
@@ -570,22 +637,33 @@ font-size: 1.5rem;
 
 }
 
+.gads-fav{
+
+display: flex;
+justify-content: left;
+align-items: center;
+
+}
+
+.favorits{
+
+margin-left: .5rem;
+
+}
+
+.favorits i{
+
+font-size: 1.5rem;  
+cursor: pointer;  
+
+}
+
 .carCena p{
 
 font-size: 1.5rem;
 margin-right: 1.5rem;
 background: var(--secondcolor);
 padding: .5rem;
-
-}
-
-.carinfo{
-
-width: 60%;
-display: flex;
-align-items: center;
-flex-direction: column;
-margin-top: 1rem;
 
 }
 
@@ -600,8 +678,26 @@ justify-content: space-between;
 align-items: center;
 padding: 0 1rem;
 
+}
+
+.favorits{
+
 
 }
+
+.rep{
+
+color: red;
+
+}
+
+.fav{
+
+color: var(--secondcolor);
+
+}
+
+
 
 .colon1, .colon2{
 
