--- a/Latmarket/assets/style-atsakmes.css
+++ b/Latmarket/assets/style-atsakmes.css
@@ -14,14 +14,18 @@ display: flex;
 justify-content: center;
 align-items: center;
 flex-direction: column;
+box-shadow: 0 0 1.5rem rgba(0, 0, 0, 30%);
+border-radius: 2rem;
 
 }
 
 .atsakmesForm h1{
 
-background: var(--second);
+background: var(--secondcolor);
 padding: 2rem 2rem;
-color: var(--white);
+color: var(--texcolor);
+border-bottom-left-radius: 1rem;
+border-bottom-right-radius: 1rem;
 
 }
 
@@ -49,6 +53,12 @@ cursor: pointer;
 
 }
 
+.stars i.active{
+
+color: #ebb400;
+
+}
+
 
 .textarea-long{
 
@@ -56,7 +66,7 @@ position: relative;
 height: 100%;
 width: 100%;
 margin-top: 3rem;
-margin-bottom: 3rem;
+margin-bottom: 2rem;
 
 }
 
@@ -66,9 +76,11 @@ margin-bottom: 3rem;
 width: 100%;
 height: 20rem;
 padding: 1rem;
-background: #353535;
+background: var(--maincolor);
 resize: none;
 color: var(--white);
+border-radius: 1rem;
+box-shadow: 0 0 1.5rem rgba(0, 0, 0, 30%);
 
 }
 
