--- a/Latmarket/Transport/car/assets/style-car.css
+++ b/Latmarket/Transport/car/assets/style-car.css
@@ -1,7 +1,8 @@
 .search-line{
 
 background: var(--maincolor);
-padding: 10rem 10% 4rem 10%;
+padding: 6rem 10% 4rem 10%;
+margin-top: 2rem;
 
 }
 
@@ -29,6 +30,7 @@ align-items: center;
 background: var(--maincolor);
 padding: 0 1.5rem;
 position: relative;
+border-radius: 2rem;
 
 }
 
@@ -88,7 +90,7 @@ font-size: .9rem;
 
 .filter{
 
-background: var(--textcolor);
+background: var(--maincolor);
 padding: 2rem 5%;
 display: flex;
 justify-content: center;
@@ -125,110 +127,58 @@ padding: 0%;
 
 }
 
-.list-choice{
-
-width: 250px;
-margin:1em auto;
-position: relative;
-cursor: pointer; 
-
-}
-
-.list-choice.deactive{
-
-cursor: not-allowed; 
-
-}
-
-.list-choice.deactive .list-choice-title{
-
-background: var(--hover);
-
-}
-
-.list-choice input[type="radio"]{
-
-position:absolute;
-left:-9999px;
-
-}
-
-.list-choice-title {
-
-width: 100%;
-display: block;
-background: var(--secondcolor);
-text-align: center;
-padding: 1em 1em;
-box-sizing: border-box;
-color: #FFF;
-
-}
-
-
-
-.list-choice input[type="radio"] + span {
-
-color: #FFF;
-background: var(--secondcolor);
-padding: 1em 1em;
-display: block;
-text-align: center;
-box-sizing: border-box;
+.filt-cont select {
+    
+appearance: none;
+outline: 10px red;
+border: 0;
+box-shadow: none;
+flex: 1;
+padding: 0 1em;
+color: var(--textcolor);
+background-color: var(--hover);
+background-image: none;
 cursor: pointer;
-width: 100%;
-z-index: 1;
-min-height: 3.2em; 
+font-weight: bold;
+font-size: 1rem;
 
 }
 
-.list-choice-objects {
+.filt-cont select option{
 
+font-size: 1rem;
+
+}
+
+.select {
+
+position: relative;
+display: flex;
+width: 20em;
+height: 3em;
+border-radius: .25em;
+overflow: hidden;
+
+}
+
+
+.select::after {
+content: '\25BC';
 position: absolute;
 top: 0;
-padding-top: 3.2em;
-box-sizing: border-box;
-width: 100%;
-overflow: hidden;
-max-height: 0;
-transition: all 250ms ease;
-
+right: 0;
+padding: 1em;
+background-color: var(--secondcolor);
+transition: .25s all ease;
+pointer-events: none;
 }
 
-.list-choice:hover .list-choice-objects  input[type="radio"] + span {
 
-position: relative;
-top: 5;
-transition: all 250ms ease-in-out;
+.select:hover::after {
 
-}
-
-.list-choice:hover input[type="radio"] + span:hover {
-
-background: var(--maincolor);
+color: var(--maincolor);
 
 }
-
-.list-choice:hover input[type="radio"]:checked + span:hover {
-
-background:#74D68E;
-
-}
-
-.list-choice input[type="radio"]:checked + span {
-
-background: #74D68E;
-position: absolute;
-top: 0em;
-
-}
-
-.list-choice:hover .list-choice-objects {
-
-max-height: 1040px;
-
-}
-
 
 .min-max-filter{
 
@@ -379,6 +329,7 @@ align-items: center;
 justify-content: space-evenly;
 padding: 15px 10px;
 box-shadow: 0 0 1.5rem rgba(0, 0, 0, 30%);
+border-radius: 2rem;
 
 }
 
@@ -394,6 +345,7 @@ margin: 0 10px;
 cursor: pointer;
 padding: 0 10px;
 transition: all 0.3s ease;
+border-radius: 2rem;
 
 }
 
@@ -491,7 +443,7 @@ color: #fff;
 
 .offers{
 
-background: var(--textcolor);
+background: var(--maincolor);
 padding: 3rem 10%;
 
 }
@@ -648,6 +600,9 @@ align-items: center;
 .favorits{
 
 margin-left: .5rem;
+display: flex;
+justify-content: center;
+align-items: center;
 
 }
 
@@ -655,6 +610,19 @@ margin-left: .5rem;
 
 font-size: 1.5rem;  
 cursor: pointer;  
+background: var(--maincolor);
+
+}
+
+.rep{
+
+color: red;
+
+}
+
+.fav{
+
+color: #ebb400;
 
 }
 
@@ -679,24 +647,6 @@ align-items: center;
 padding: 0 1rem;
 
 }
-
-.favorits{
-
-
-}
-
-.rep{
-
-color: red;
-
-}
-
-.fav{
-
-color: var(--secondcolor);
-
-}
-
 
 
 .colon1, .colon2{
